# socialwarehouse

./: .Dockerfile.icloud  .coderabbit.yaml  .docker-compose.yml.icloud  .dockerignore  .entrypoint.sh.icloud  .env.example  .gitignore  .gitmodules  .pg_hba.conf.icloud  .requirements.txt.icloud  CLAUDE.md  Dockerfile  Dockerfile_Spark  Makefile  NetrwTreeListing  README.md  conftest.py  docker-compose.yml  manage.py  pg_hba.conf  pyproject.toml  requirements.txt  spark-client-defaults.properties  spark-defaults.conf  spark-defaults.properties  spark-master-defaults.properties  spark-worker-defaults.properties  spark.Dockerfile  spark_entrypoint.sh  spark_requirements.txt
.github/workflows/: ci.yml
code/bash_scripts/: .fetch_census.sh.icloud  .from_julie.sh.icloud  .load_psql.sh.icloud  client_setup.sh  fetch_census.sh  load_psql.sh  misc.sh  sedona_starter.sh
code/config_files/: spark-defaults.conf
code/python/: .ensure_paths.py.icloud  .fetch_census_shapefiles.py.icloud  .fetch_urbanicity_shapefiles.py.icloud  .load_census_shapefiles.py.icloud  .load_nces_shapefiles.py.icloud  .load_voters.py.icloud  .settings.py.icloud  .utilities.py.icloud  ensure_paths.py  fetch_census_shapefiles.py  fetch_urbanicity_shapefiles.py  load_census_shapefiles.py  load_nces_shapefiles.py  load_voters.py  settings.py  utilities.py
code/spark/spark_apps/: sedona.scala  voterfile.scala
code/sql_templates/: .cvapdata.sql.icloud  .dispos.sql.icloud  .full_process.sql.icloud  .jamaa_clustering.sql.icloud  .try_roads.sql.icloud  full_process.sql  try_roads.sql
conf/: build.env  postgres.env
dev/: sw.zsh
docker/: all.profile.yml  computation.profile.yml  maven.profile.yml  postgis.profile.yml  python-comp.yml  spark-build-image.yml  spark.profile.yml
docker/postgis-age/: Dockerfile  initdb-age.sql  postgresql.conf.age
docker/python-computation/: Dockerfile  entrypoint.sh  requirements.txt
docker/sedonadb/: Dockerfile  entrypoint.sh  requirements.txt
docker/spark/: Dockerfile  spark-master-defaults.properties  spark_requirements.txt
docs/: fetch_census.MD  zeppelin-jdbc.md
scripts/: fetch_acs_demographics.py  fetch_census_tiger.py  fetch_rdh_boundaries.py  generate-wiki.sh
scripts/wiki-templates/: Configuration.md  Home.md
shell_scripts/: fetch_census.sh
socialwarehouse/: __init__.py  celery_app.py  urls.py
socialwarehouse/api/: pagination.py  throttling.py
socialwarehouse/api/geo/: urls.py  views.py
socialwarehouse/api/warehouse/: serializers.py  urls.py  views.py
socialwarehouse/delta/: config.py  enrichment.py  tables.py
socialwarehouse/geo/: apps.py  tasks.py
socialwarehouse/geo/fixtures/: court_ordered_plans.json
socialwarehouse/geo/management/commands/: assign_boundaries.py  compute_geographic_intersections.py  export_to_delta.py  geocode_addresses.py
socialwarehouse/geo/migrations/: 0001_initial.py
socialwarehouse/geo/models/: __init__.py  address.py  address_boundary.py  census_vintage.py  intersections.py  political.py
socialwarehouse/settings/: base.py  development.py  production.py  test.py
socialwarehouse/warehouse/: apps.py
socialwarehouse/warehouse/management/commands/: load_warehouse.py
socialwarehouse/warehouse/migrations/: 0001_initial.py
socialwarehouse/warehouse/models/: __init__.py  dimensions.py  facts.py
socialwarehouse/warehouse/services/: __init__.py  census_loader.py  dimension_loader.py  geographic_enrichment.py
swh/: __init__.py  census.py  cli.py  config.py  voters.py
tests/unit/api/: test_geo_api.py
tests/unit/geo/: test_models.py  test_warehouse.py
