[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socialwarehouse"
version = "2.0.0-dev"
description = "Data warehouse and delta lake for geographic, demographic, and civic data — the DSTK replacement"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.11"
authors = [
    {name = "Dheeraj Chand", email = "dheeraj@siegeanalytics.com"},
]

dependencies = [
    "siege-utilities[geo]>=3.13.0",
    "Django>=4.2",
    "djangorestframework>=3.14",
    "celery[redis]>=5.3",
    "click>=8.0",
    "geopandas>=1.1.2",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
spark = [
    "pyspark>=3.4",
    "delta-spark>=3.0",
    "apache-sedona>=1.5",
]
analysis = [
    "pysal>=24.1",
    "tobler>=0.11",
    "scipy>=1.11",
]
full = [
    "socialwarehouse[spark,analysis]",
    "polars[all]>=0.20",
]
dev = [
    "ipython",
    "ipdb",
    "pytest>=7.0",
    "pytest-django>=4.5",
    "ruff>=0.3",
]

[project.scripts]
swh = "swh.cli:cli"

[tool.setuptools.packages.find]
include = ["swh*", "socialwarehouse*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "socialwarehouse.settings.test"
pythonpath = ["."]
